package storage

import (
	"context"
	"fmt"
	"time"

	"tunnox-core/internal/core/dispose"
)

// RemoteStorageConfig 远程存储配置
type RemoteStorageConfig struct {
	// gRPC 服务地址
	GRPCAddress string
	
	// 连接超时
	Timeout time.Duration
	
	// 最大重试次数
	MaxRetries int
	
	// TLS 配置
	TLSEnabled bool
	TLSCertFile string
	TLSKeyFile string
}

// RemoteStorage 远程存储实现（通过 gRPC）
// 用于集群模式下的持久化存储
// 注意：此实现为占位符，实际 gRPC 通信需要在生产环境中实现
type RemoteStorage struct {
	config *RemoteStorageConfig
	ctx    context.Context
	dispose.Dispose
	
	// gRPC 客户端连接（预留，待实现）
	// client storagepb.StorageServiceClient
}

// NewRemoteStorage 创建远程存储
func NewRemoteStorage(parentCtx context.Context, config *RemoteStorageConfig) (*RemoteStorage, error) {
	if config == nil {
		return nil, fmt.Errorf("remote storage config is required")
	}
	
	// 设置默认值
	if config.Timeout == 0 {
		config.Timeout = 5 * time.Second
	}
	if config.MaxRetries == 0 {
		config.MaxRetries = 3
	}
	
	storage := &RemoteStorage{
		config: config,
		ctx:    parentCtx,
	}
	
	storage.SetCtx(parentCtx, storage.onClose)
	
	// gRPC 连接建立（预留，待实现）
	// 在生产环境中需要实现以下逻辑：
	// 1. 配置 TLS（如果启用）
	// 2. 创建 gRPC 连接：conn, err := grpc.DialContext(...)
	// 3. 创建客户端：storage.client = storagepb.NewStorageServiceClient(conn)
	// 4. 实现重连和健康检查机制
	
	dispose.Infof("RemoteStorage: initialized (gRPC: %s, stub mode)", config.GRPCAddress)
	return storage, nil
}

// onClose 资源释放回调
func (r *RemoteStorage) onClose() error {
	dispose.Infof("RemoteStorage: closing")
	// gRPC 连接关闭（预留，待实现）
	// 在生产环境中需要关闭 gRPC 连接
	return nil
}

// Set 设置键值对
// 注意：此方法为占位符实现，生产环境需要实现 gRPC 调用
func (r *RemoteStorage) Set(key string, value interface{}) error {
	// 生产环境实现示例：
	// ctx, cancel := context.WithTimeout(r.ctx, r.config.Timeout)
	// defer cancel()
	// _, err := r.client.Set(ctx, &storagepb.SetRequest{Key: key, Value: value})
	// return err
	dispose.Debugf("RemoteStorage.Set: key=%s (stub implementation)", key)
	return nil
}

// Get 获取值
// 注意：此方法为占位符实现，生产环境需要实现 gRPC 调用
func (r *RemoteStorage) Get(key string) (interface{}, error) {
	dispose.Debugf("RemoteStorage.Get: key=%s (stub implementation)", key)
	return nil, ErrKeyNotFound
}

// Delete 删除键
// 注意：此方法为占位符实现，生产环境需要实现 gRPC 调用
func (r *RemoteStorage) Delete(key string) error {
	dispose.Debugf("RemoteStorage.Delete: key=%s (stub implementation)", key)
	return nil
}

// Exists 检查键是否存在
// 注意：此方法为占位符实现，生产环境需要实现 gRPC 调用
func (r *RemoteStorage) Exists(key string) (bool, error) {
	dispose.Debugf("RemoteStorage.Exists: key=%s (stub implementation)", key)
	return false, nil
}

// BatchSet 批量设置
// 注意：此方法为占位符实现，生产环境需要实现 gRPC 调用
func (r *RemoteStorage) BatchSet(items map[string]interface{}) error {
	dispose.Debugf("RemoteStorage.BatchSet: %d items (stub implementation)", len(items))
	return nil
}

// BatchGet 批量获取
// 注意：此方法为占位符实现，生产环境需要实现 gRPC 调用
func (r *RemoteStorage) BatchGet(keys []string) (map[string]interface{}, error) {
	dispose.Debugf("RemoteStorage.BatchGet: %d keys (stub implementation)", len(keys))
	return make(map[string]interface{}), nil
}

// BatchDelete 批量删除
// 注意：此方法为占位符实现，生产环境需要实现 gRPC 调用
func (r *RemoteStorage) BatchDelete(keys []string) error {
	dispose.Debugf("RemoteStorage.BatchDelete: %d keys (stub implementation)", len(keys))
	return nil
}

// Close 关闭连接
func (r *RemoteStorage) Close() error {
	r.Dispose.Close()
	return nil
}

